# SurgeryAfford

./: .env  .gitignore  EXPERIMENT.md  const.py  diffpd_2d.py  diffpd_2d_candi_contact.py  gen_mesh.py  mask_afford.py  pyproject.toml
data/mesh/: shape.msh  shape.vtk
data/results/ForceEqual4StiffnessEstimation/: ForceEqual4StiffnessEstimation.md
data/results/Mask2Afford/: MaskAfford.md
deformation_model/: diffpd_2d.py  diffpd_2d_candi_contact.py  pd_data_loader.py  pd_stretch_datasample.py
output/results/mask2afford/: MaskAfford.md  affordance_results.txt
sofa/: sofa_utilze.py  strain_gradient_fixed.py  stretch_dataloader.py  stretch_datasample.py
task/: mask_afford.py  strain_optimize_force.py  strain_optimize_force_EKF.py  strain_optimize_force_adam.py  strain_optimize_force_noise.py  strain_optimize_force_test.py
utilize/: mesh_io.py  mesh_util.py
visualize/: triangle_property_visualize.py
